# StellarEye

./: CMakeLists.txt  Makefile  Notes.txt  README.md
Data/SDSS/: data.py  galaxyimages.py
Executable/: GalaxyDataLoader  dataloader  filter_galaxies  model  test  test2
formal/: Formal.lean  Main.lean  lakefile.toml
formal/Formal/Utils/: Basic.lean
results/outputs/: Galaxy_output.txt
src/: model.cpp  test.cpp  test2.cpp
src/DataControl/: GalaxyDataLoader.cpp  dataloader.cpp  filter_galaxies.cpp
src/Haskell/: Haskell.cabal  LICENSE
src/Haskell/app/: Main.hs
src/TestModels/: TestDistanceModel.cpp
